<resources>
    <string name="app_name">Mammut</string>
    <string name="join_instance">Join instance</string>
    <string name="mammut">Mammut</string>
    <string name="instance_url">Instance URL</string>
    <string name="oauth_scheme">oauth2redirect</string>
    <string name="logging_you_in">Logging you in</string>
    <string name="app_client_name">Mammut for Android</string>
    <string name="error_url_empty">URL can\'t be empty</string>
    <string name="error_empty_url">You need to enter an instance URL</string>
    <string name="error_no_browser">Looks like you don\'t have a browser \uD83D\uDC40</string>
    <string name="error_non_existant_instance">It looks like this instance doesn\'t exist - is this right?</string>
    <string name="error_generic">Something went wrong when logging in, try again</string>
    <string name="instances">INSTANCES</string>
    <string name="add_instance">ADD INSTANCE</string>
    <string name="more_information">More information</string>
    <string name="statuses">Statuses</string>
    <string name="connections">Connections</string>
    <string name="users">Users</string>
    <string name="log_out">Log Out</string>
    <string name="uptime_percent">Reporting an uptime of $.2d%</string>
    <string name="home">Home</string>
    <string name="local">Local</string>
    <string name="federated">Federated</string>
    <string name="profile">Profile</string>
    <string name="profile_button_content_description">Profile button</string>
    <string name="new_toots">New toots</string>
    <string name="profile_image">Profile image</string>
    <string name="follow">Follow</string>
    <string name="toots">Toots</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="w_replies">w/ Replies</string>
    <string name="media">Media</string>
    <string name="unfollow">Unfollow</string>
    <string name="sensitive_content_warning">Sensitive Content</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="about_mammut">About Mammut</string>
    <string name="account_settings">Account Settings</string>
    <string name="contributors">Contributors</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="enable_light_mode">Use Light Theme</string>
    <string name="disable_streaming">Disable Streaming</string>
    <string name="disable_streaming_subtitle">This could save you some data</string>
    <string name="change_instance">Change Instance</string>
    <string name="keep_your_place">Keep your place</string>
    <string name="well_keep_your_place">We\'ll remember where you left off</string>
    <string name="launch_chooser_description">Launch the instance switcher screen on app start</string>
    <string name="launch_chooser_title">Open to chooser</string>
    <string name="pull_to_refresh_for_new_toots_or_find_your_own_way_back_to_the_top">Pull to refresh for new toots, or find your own way back to the top</string>
    <string name="i_ll_find_my_own_way">I\'ll find my own way</string>
    <string name="looks_like_you_re_looking_at_old_content">Looks like you\'re looking at old content</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="full_app_name">Mammut for Mastodon</string>
    <string name="k_oss_development">K-OSS Development</string>
    <string name="swipe_between_instances">Swipe between Instances</string>
    <string name="notifications">Notifications</string>
    <string name="your_accounts">Your Accounts</string>
    <string name="app_theme">App Theme</string>
    <string name="select">Select</string>
    <string name="retoot">Retoot</string>
    <string name="reply">Reply</string>
    <string name="boost">Boost</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_follow_system">Dark Mode - Follow System</string>
    <string name="dark_mode_follow_system_description">Follow night mode system preference</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="home_feed_title">Home Timeline</string>
    <string name="home_feed_subtitle">Users you follow</string>
    <string name="local_feed_title">Local Timeline</string>
    <string name="local_feed_subtitle">Users in this instance</string>
    <string name="federated_feed_title">Federated Timeline</string>
    <string name="federated_feed_subtitle">Users from this instance and others</string>
    <string name="home_feed_label">Feed - Home</string>
    <string name="local_feed_label">Feed - Local</string>
    <string name="federated_feed_label">Feed - Federated</string>
</resources>
