<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/localTimeline"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/local"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/federatedTimeline"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/federated"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />
</menu>