<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/looks_like_you_re_looking_at_old_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pull_to_refresh_for_new_toots_or_find_your_own_way_back_to_the_top" />

    <Button
        android:id="@+id/findMyOwnWayButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/i_ll_find_my_own_way"
        android:textColor="?attr/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/bottom_navigation_shadow" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?attr/colorPrimary"
            android:elevation="8dp" />
    </LinearLayout>

</LinearLayout>